# ascent

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  convert_hdf_to_zarr.py  pyproject.toml
ascent/: __init__.py  cli.py
ascent/datasets/: tracking_dataset.py  transformations.py
ascent/tools/: run_ascent.py  train.py  train_helper.py
ascent/utils/: common.py  distributed.py
ascent/utils/track/: io.py  tracker.py
docs/: Makefile  conf.py  example.ipynb  make.bat
examples/configs/: track_template.py  train_NETr_template.py
examples/scripts/: convert_hdf_to_zarr.py  stardist_segment.py
examples/tests/: test_zarr_dataset.py
src/ascent/: __init__.py  __main__.py  cli.py
src/ascent/datasets/: tracking_dataset.py
src/ascent/models/: loss.py  netr.py  util.py
src/ascent/tools/: run_ascent.py  run_track.py  train.py  train_helper.py
src/ascent/utils/: distributed.py
src/ascent/utils/track/: common.py  io.py  tracker.py
tests/: test_zarr_dataset.py
