[project]
name = "ascent"
version = "0.1.0"
description = "Annotation-free Self-supervised Contrastive Embeddings for 3D Neuron Tracking"
authors = [{ name = "Haejun Han" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "h5py",
    "numpy<2",
    "pandas",
    "scipy",
    "tensorboard",
    "hdf5plugin",
    "timm",
    "torch",
    "torchvision",
    "zarr<3",
    "numcodecs<0.16",
]


[tool.poetry]
name = "ascent"
version = "0.1.0"
description = "Annotation-free Self-supervised Contrastive Embeddings for 3D Neuron Tracking"
authors = ["Haejun Han"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
ascent = "ascent.cli:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
torch = "^2.5"
torchvision = "^0.20"
timm = "^1.0"
numpy = "<2"
scipy = "^1.14"
pandas = "^2.2"
h5py = "^3.12"
tensorboard = ">=2.18"
zarr = "<3"
hdf5plugin = "*"
numcodecs = "<0.16"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
