[project]
name = "ascent"
version = "0.1.1"
description = "Annotation-free Self-supervised Contrastive Embeddings for 3D Neuron Tracking"
authors = [{ name = "Haejun Han" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "h5py",
    "numpy<2",
    "pandas",
    "scipy",
    "tensorboard",
    "hdf5plugin",
    "timm",
    "torch",
    "torchvision",
    "zarr<3",
    "numcodecs<0.16",
]


[project.scripts]
ascent = "ascent.cli:main"


[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
